# timetable-bot

./: .gitignore  main.py  pyproject.toml  timetables.db
app/bot/: constants.py  messages.py  telegram_bot.py
app/db/: base_model.py  sqlite_db.py
app/models/: organization.py
